--- a/app/views/Application/TestPage.html
+++ b/app/views/Application/TestPage.html
@@ -23,7 +23,9 @@
                 }});
 
         }
-
+        function fourth(){
+        	
+        }
         function third() {
             var firstInput=$("#first").val();
             alert(firstInput);
