fix the conflict

--- a/app/views/Application/TestPage.html
+++ b/app/views/Application/TestPage.html
@@ -27,7 +27,7 @@
         function third() {
             var firstInput=$("#first").val();
             alert(firstInput);
-            //location.href="http://baidu.com"
+            //location.href="/Application/firsttest"
 
         }
 
