--- a/app/views/Application/GJsLearning.html
+++ b/app/views/Application/GJsLearning.html
@@ -63,23 +63,72 @@
 
 <h1>分割3-------------------------------------------------</h1>
 <script>
-function postit()
-{
+    function checkMobile(sMobile){
 
-    x=document.getElementById("thisis");
-    x.innerHTML="Hello javascript heiehiehei!"
+        if(!(/^1[3|4|5|7|8][0-9]\d{4,8}$/.test(sMobile))){
+
+            //alert("不是完整的11位手机号或者正确的手机号前七位");
+
+            //document.mobileform.mobile.focus();
+
+            return false;
+
+        }
+        return true;
+
+    }
+/*
+    作者：zerogang
+    链接：http://www.jianshu.com/p/3a25df04d4f9
+            來源：简书
+    著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+*/
+
+function btn() {
+    var username=$("#username").val();
+    $.ajax({
+        type : "POST",
+        url:"http://202.119.160.97",             //需要链接到服务器地址
+        data:{
+            "username":username
+        },
+        success: function (data, status) {//请求成功后的回调函数有两个参数
+            //var data_json=eval(data);
+            if(data==="0"){
+                location.href="http://baidu.com";
+            }else{
+                alert("失败");
+            }
+        }});
 
 }
 
+function postit() {
+    var postman=document.getElementById("postman");
+    var carnumber=document.getElementById("carnumber");
+    var telephone=document.getElementById("telephone");
+    if(checkMobile(telephone.value)) {
+        alert(postman.value + "\n" + carnumber.value + "\n" + telephone.value);
+    }
+    else {
+        alert("number error");
+    }
+}
 </script>
 
-<input type="text" value="人名" id="thisis">
+<input type="text" value="人名" id="postman">
 
-<input type="text" value="车牌" id="e">
+<input type="text" value="车牌" id="carnumber">
 
-<input type="text" value="电话" id="d">
+<input type="text" value="电话" id="telephone">
 
 <button type="button"  id="t" onclick="postit()">提交</button>
+
+
+<h1>分割4主页面模型-------------------------------------------------</h1>
+
+
+
 
 </body>
 </html>
