make some change

--- a/app/views/Application/GJsLearning.html
+++ b/app/views/Application/GJsLearning.html
@@ -66,12 +66,13 @@
 function postit()
 {
 
-    x=document.getElementById("thisis");
-    x.innerHTML="Hello javascript heiehiehei!"
+    var x=document.getElementById("thisis");
+    alert(x.value);
 
 }
 
 </script>
+
 
 <input type="text" value="人名" id="thisis">
 
