--- a/app/views/Application/GJsLearning.html
+++ b/app/views/Application/GJsLearning.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <title>This is Gao's Js learning and practise place</title>
     <script type="text/javascript" src="public/javascripts/jquery-1.6.4.min.js"></script>
+
+    <style type="text/css">
+        body{
+            background-size:cover;
+        }
+    </style>
 </head>
-<body>
+<body background="/public\images\abstract-white-background.jpg">
 <p id="demo">this is a test pragram which will be chang after click one button</p>
 
 <script>
