--- a/app/views/Application/GJsLearning.html
+++ b/app/views/Application/GJsLearning.html
@@ -2,142 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is Gao's Js learning and practise place</title>
-    <script type="text/javascript" src="public/javascripts/jquery-1.6.4.min.js"></script>
-
-    <style type="text/css">
-        body{
-            background-size:cover;
-        }
-    </style>
+    <title>sign-up</title>
+    <link rel="stylesheet" href="\public/stylesheets/common_form.css">
 </head>
-<body background="/public\images\abstract-white-background.jpg">
-<p id="demo">this is a test pragram which will be chang after click one button</p>
-
-<script>
-    document.write("<h1>This is a heading</h1>");
-    document.write("<p>This is a paragraph.</p>");
-
-</script>
-<script>
-    function myfunction()
-    {
-        x=document.getElementById("demo");
-        x.innerHTML="Hello javascript heiehiehei!"
-    }
-</script>
-<button type="button"  onclick="alert('Welcome!')">点击这里</button>
-<button type="button"  onclick="myfunction()">嘿嘿</button>
-
-
-<h1>分割-------------------------------------------------</h1>
-<script>
-    function changeImage()
-    {
-        element=document.getElementById('myimage')
-        if (element.src.match("favicon"))
-        {
-            element.src="/public/images/test.png";
-        }
-        else
-        {
-            element.src="/public/images/favicon.png";
-        }
-    }
-</script>
-
-<img id="myimage"  onclick="changeImage()" src="/public/images/test.png">
-
-
-<h1>分割2-------------------------------------------------</h1>
-
-<h1>我的第一段 JavaScript</h1>
-
-<p id="demo2">
-    JavaScript 能改变 HTML 元素的样式。
-</p>
-
-<script>
-    function changecolor()
-    {
-        x=document.getElementById("demo2"); // 找到元素
-        x.style.color="#ff0000";          // 改变样式
-    }
-</script>
-
-<button type="button" onclick="changecolor()">点击这里</button>
-
-<h1>分割3-------------------------------------------------</h1>
-<script>
-    function checkMobile(sMobile){
-
-
-        if(!(/^1[3|4|5|7|8][0-9]\d{4,8}$/.test(sMobile))){
-
-            //alert("不是完整的11位手机号或者正确的手机号前七位");
-
-            //document.mobileform.mobile.focus();
-
-            return false;
-
-        }
-        return true;
-
-    }
-/*
-    作者：zerogang
-    链接：http://www.jianshu.com/p/3a25df04d4f9
-            來源：简书
-    著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
-*/
-
-function btn() {
-    var username=$("#username").val();
-    $.ajax({
-        type : "POST",
-        url:"http://202.119.160.97",             //需要链接到服务器地址
-        data:{
-            "username":username
-        },
-        success: function (data, status) {//请求成功后的回调函数有两个参数
-            //var data_json=eval(data);
-            if(data==="0"){
-                location.href="http://baidu.com";
-            }else{
-                alert("失败");
-            }
-        }});
-
-
-}
-
-function postit() {
-    var postman=document.getElementById("postman");
-    var carnumber=document.getElementById("carnumber");
-    var telephone=document.getElementById("telephone");
-    if(checkMobile(telephone.value)) {
-        alert(postman.value + "\n" + carnumber.value + "\n" + telephone.value);
-    }
-    else {
-        alert("number error");
-    }
-}
-</script>
-
-
-<input type="text" value="人名" id="postman">
-
-<input type="text" value="车牌" id="carnumber">
-
-<input type="text" value="电话" id="telephone">
-
-<button type="button"  id="t" onclick="postit()">提交</button>
-
-
-<h1>分割4主页面模型-------------------------------------------------</h1>
-
-
-
-
+<body>
+    <header>
+        <div class="header-line"></div>
+    </header>
+    <div class="content">
+        <img class="content-logo" src="\public/images/form_logo.png" alt="logo">
+        <h1 class="content-title">创建账户</h1>
+        <div class="content-form">
+            <form method="post" action="" onsubmit="return submitTest()">
+                <div id="change_margin_1">
+                    <input class="user" type="text" name="user" placeholder="请输入用户名" onblur="oBlur_1()" onfocus="oFocus_1()">
+                </div>
+                <!-- input的value为空时弹出提醒 -->
+                <p id="remind_1"></p>
+                <div id="change_margin_2">
+                    <input class="password" type="password" name="password" placeholder="请输入密码" onblur="oBlur_2()" onfocus="oFocus_2()">
+                </div>
+                <!-- input的value为空时弹出提醒 -->
+                <p id="remind_2"></p>
+                <div id="change_margin_3">
+                    <input class="content-form-signup" type="submit" value="创建账户">
+                </div>
+            </form>
+        </div>
+        <div class="content-login-description">已经拥有账户？</div>
+        <div><a class="content-login-link" href="log_in.html">登录</a></div>
+    </div>
+<script src="\public/javascripts/common_form_test.js"></script>
 </body>
 </html>
