--- a/app/views/Application/TestPage.html
+++ b/app/views/Application/TestPage.html
@@ -1,9 +1,8 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CarReservation html test ppage</title>
+    <title>CarReservation html test page</title>
     <script src="/public/javascripts/jquery-1.6.4.min.js"></script>
     <script>
         function btn() {
