--- a/app/views/Application/GJsLearning.html
+++ b/app/views/Application/GJsLearning.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Apply</title>
-    <link rel="stylesheet" href="\public/stylesheets/common_form.css">
+    <link rel="stylesheet" href="public/sstylesheets/common_form.css">
 </head>
 <body>
     <header>
         <div class="header-line"></div>
     </header>
     <div class="content">
-        <img class="content-logo" src="\public/images/form_logo.png" alt="logo">
+        <img class="content-logo" src="public/images/form_logo.png" alt="logo">
         <h1 class="content-title">填写信息</h1>
+        <p>${id}</p>
         <div class="content-form">
             <form method="post" action="" onsubmit="return submitTest()">
             <!-- 工号-->
@@ -59,6 +60,6 @@
         <div class="content-login-description">已经填写申请？</div>
         <div><a class="content-login-link" href="log_in">登录查看</a></div>
     </div>
-<script src="\public/javascripts/common_form_test.js"></script>
+<script src="public/javascripts/common_form_test.js"></script>
 </body>
 </html>
