I know hot to sent data to html and use it in html and pass the test

--- a/app/views/Application/GJsLearning.html
+++ b/app/views/Application/GJsLearning.html
@@ -55,6 +55,12 @@
                 <div id="change_margin_7">
                     <input class="content-form-signup" type="submit" value="提交">
                 </div>
+
+                <!-- 测试-->
+                <div >
+                    <input type="test" value="${orderTabletest.username}" >
+
+                </div>
             </form>
         </div>
         <div class="content-login-description">已经填写申请？</div>
