终结了下数据库操作,网页传值与调用,,

--- a/app/views/Application/order.html
+++ b/app/views/Application/order.html
@@ -16,13 +16,13 @@
         <form method="post" action="" onsubmit="return submitTest()">
             <!-- 工号-->
             <div id="change_margin_1">
-                <input class="id" type="text" name="id" placeholder="请填写工号" onblur="oBlur_1()" onfocus="oFocus_1()">
+                <input class="id" type="text" name="id" placeholder="请填写工号" value=""  onblur="oBlur_1()" onfocus="oFocus_1()">
             </div>
             <!-- input的value为空时弹出提醒 -->
             <p id="remind_1"></p>
             <!-- 姓名-->
             <div id="change_margin_2">
-                <input class="user" type="text" name="user" placeholder="请填写姓名" onblur="oBlur_2()" onfocus="oFocus_2()">
+                <input class="user" type="text" name="user" placeholder="请填写姓名" value="" onblur="oBlur_2()" onfocus="oFocus_2()">
             </div>
             <!-- input的value为空时弹出提醒 -->
             <p id="remind_2"></p>
